# alert

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.java  docker-compose.yml  pom.xml  test-db-init.sh
alert-interface/: alert_types.md  event.md  host-behavior-example.json  host-behavior-fields.json  malicious-sample-example.json  malicious-sample-fields.json  network-attack-example.json  network-attack-fields.json  threat-event-fields.json
alert-interface/api-examples/: host-behavior-api.json  malicious-sample-api.json  network-attack-api.json
docker-compose/: clickhouse-compose.yml  flink-compose.yml  postgres-compose.yml  thehive-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
mock/: KAFKA_PRODUCER_README.md  KAFKA_PRODUCER_SERVICE.md  README.md  generate_mock_data.py  kafka_producer.py
mock/kafka-producer-service/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  KAFKA_TEST_CONNECTION_FEATURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UPLOAD_FEATURE_UPDATE.md  docker-compose.yml  pom.xml
sql/: 001_create_users_table.sql  002_create_users_indexes.sql  003_create_data_storage_config_table.sql  003_create_flink_configs_table.sql  004_insert_default_clickhouse_config.sql  004_insert_default_flink_config.sql  005_create_alert_processing_tables.sql  006_create_alert_metadata_tables.sql  006_insert_sample_alerts.sql  007_create_alert_storage_mapping.sql  008_create_tags_table.sql  insert_alert_fields.sql
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs
(+161 files in other folders)
